--- a/website/business/terms-and-conditions.html
+++ b/website/business/terms-and-conditions.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="text-shadow">
+    <div>
+      <img
+        style="float: left; margin: 20px;"
+        src="../img/terms-symbol/terms-symbol.png"
+        alt="Terms and Conditions"
+      />
+    </div>
     <h3>Terms And Conditions</h3>
     <p>
       This document will describe the terms and conditions of using the
@@ -106,8 +113,43 @@
       </li>
     </ol>
     <h4>Departments</h4>
-    <p>
-      There are four departments which volunteers can choose to work in.
-    </p>
+    <ul>
+      <p>
+        There are four departments which volunteers can choose to work in. The
+        departments are finance, website, legal, and communications.
+      </p>
+      <li><h5>Finance</h5></li>
+      <p>
+        Manages the
+        <abbr title="Recycle City Movement">RCM</abbr>
+        charity fund. Authorizes pay-outs for web-site maintenance, business
+        taxes, community foundation, and community support.
+      </p>
+      <p>
+        Posts the charity fund bank statement on the website.
+      </p>
+      <li><h5>Website</h5></li>
+      Manages the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      website. Ensures that the website is functional, reproducible, and secure.
+      <li><h5>Legal</h5></li>
+      <p>
+        Overviews
+        <abbr title="Recycle City Movement">RCM</abbr>
+        operations in order to ensure legal compliance with governmental
+        agencies. Processes corporate non-profit status documents.
+      </p>
+      <li><h5>Communications</h5></li>
+      <p>
+        Facilitates communication processes between various entities. These
+        entities include members, the greater population, communities,
+        <abbr title="Recycle City Movement">RCM</abbr>
+        staff, governments, and other organizations.
+      </p>
+      <p>
+        Organizes the technology tree and screens technology documentation
+        uploads.
+      </p>
+    </ul>
   </body>
 </html>
