--- a/website/members/sign-up.html
+++ b/website/members/sign-up.html
@@ -8,10 +8,12 @@
       table {
         font-size: smaller;
       }
+
       th   {
         padding: 20px 0 0 20px;
         text-align: left;
       }
+
       input, select {
         box-shadow: 0px 0px 4px #aaaaaa;
         background-color: #ddffff;
@@ -32,7 +34,7 @@
         src="../img/formation-symbol/formation-symbol.png"
         alt="Formation"
       />
-    </div>  
+    </div>
     <h3>Sign-up</h3>
     <p>
       If you'd like to join
@@ -44,7 +46,7 @@
     <p>
       If you're okay with the the
       <a href="../business/terms-and-conditions.html" target="_blank">terms and conditions</a>,
-     then fill out this form. The form has mandatory
+      then fill out this form. The form has mandatory
       entries that have an asterisk, '*', in their labels.
     </p>
     <p>
@@ -56,7 +58,7 @@
       member.
     </p>
 
-    <form action="<?php $_PHP_SELF ?>" method="post">
+    <form>
       <table>
         <tr>
           <th>
