--- a/website/proposals/proposals.html
+++ b/website/proposals/proposals.html
@@ -18,40 +18,98 @@
         />
       </div>
       <h3>Proposals</h3>
-      <p>There are different kinds of proposals that members can create:</p>
+      <p>
+        Any member can make a proposal. The member fills out and submits a
+        proposal from the choices below so that it may be voted upon by the
+        voter pool. The voter pool is dynamic in that it is created from the
+        <abbr title="Recycle City Movement">RCM</abbr>
+        active membership ranks. There are different kinds of proposals that
+        members can create:
+      </p>
+    </br>
       <ul>
-        <li>a new community</li>
-        <li>a charity fund donation</li>
-        <li>a change to a business document or process</li>
+        <li>a new community;</li>
+        <li>support an existing community;</li>
+        <li>a miscellaneous charity fund donation;</li>
+        <li>a change to a business document or process.</li>
       </ul>
       <p>Proposals go through phases:</p>
-      <ul>
+      <ol>
         <li>
-          During the first week a proposal is classified as a new proposal.
+          During the first week a proposal is classified as a new proposal.</br></br>
         </li>
         <li>
-          The proposal is then judged by the number of votes it has received.
+          After seven days, the proposal is judged by the number of votes it has
+          received.</br></br>
         </li>
         <li>
           If the proposal receives votes of at least 33% of its voter pool, it
-          becomes active.
+          becomes active.</br></br>
         </li>
         <li>
           At this stage, if the proposal is not active, it is deleted from the
-          ballot box.
+          ballot box and archived. The proposal is dead.</br></br>
         </li>
         <li>
           The active proposal continues to remain in the ballot box for an
-          additional week, receiving votes.
+          additional week, receiving votes.</br></br>
         </li>
         <li>
-          At the end of the two week period the fate of the proposal is
-          determined.
+          At the end of the two week period, the proposal is judged for its
+          value. If the proposal has received votes from more than 50% of its
+          voter pool, then it is viewed as valued. Otherwise, the proposal is
+          dead.</br></br>
         </li>
         <li>
-          If the proposal received more than 50% of the votes in its favor, then
-          the proposal is adopted, and its implementation process begins.
+          If the valued proposal received more than 50% of the votes in its
+          favor, then the proposal is adopted, and its implementation process
+          begins. Otherwise, the proposal is dead.</br></br>
         </li>
+        <li>
+          During the implementation of the valued proposal, the admins work with
+          each other to sort out what changes need to take place, and what
+          actions need to occur. Also a progress report is created
+          and maintained, that is visible from the
+          <abbr title="Recycle City Movement">RCM</abbr>
+          website, detailing the steps taken to implement the proposal.</br></br>
+        </li>
+        <li>
+          If the proposal is a community funding proposal, then the Community
+          Contract is involved. Thus the would-be Community Founder, the initiator,
+          is notified of the proposal's outcome,
+          and given a detailed documentation on what steps need to be completed for
+          the funding to finalize.</br></br>
+          Most importantly, the initiator and an additional two
+          community representatives sign and notarize the Community Contract
+          and submit the contract to a designated
+          <abbr title="Recycle City Movement">RCM</abbr>
+          finance administrator.
+          <abbr title="Recycle City Movement">RCM</abbr>
+          will then review the contract and sign-off on it by having two
+          finance admins and one addition administrator sign the contract.
+          This is the final phase of community
+          funding proposal and lasts as long as ninety days. If a contract is not
+          signed by
+          <abbr title="Recycle City Movement">RCM</abbr>
+          admin and the community representatives in that period of time, the
+          proposal dies.
+        </br></br>
+          If a completed contract is done on time, then it archived on the
+          <abbr title="Recycle City Movement">RCM</abbr>
+          website. If it is a new community funding, then a fund distribution
+          transfer is completed by
+          the coordination of two
+          <abbr title="Recycle City Movement">RCM</abbr>
+          finance admins.
+        </li>
+      </ol>
+      <ul>
+        <h4>Create and submit a proposal:</h4>
+        <li><h5>A New Community</h5></li>
+        <li><h5>Support An Existing Community</h5></li>
+        <li><h5>A Miscellaneous Charity Fund Distribution</h5></li>
+        <li><h5>A Change To RCM Website</h5></li>
+        <li><h5>A Change To RCM Document</h5></li>
       </ul>
     </body>
   </html>
