--- a/website/technology/tech.html
+++ b/website/technology/tech.html
@@ -30,6 +30,51 @@
         <li>PDFs</li>
         <li>Videos</li>
       </ul>
+
+      <p>
+        The following text represent some fictional posts of how technology
+        could be shared by people from a sponsored RCM community named Hydrogen
+        City:
+      </p>
+
+      <h4>Greenhouse</h4>
+      <h5>Star Commander from Hydrogen City (3/8/3111)</h5>
+      <p>
+        The latest greenhouse is completed. Using the hinges to connect the
+        supports made the structure flexible and strong. We are hoping that the
+        dug-out and drains will protect the structure from the wind and rain.
+      </p>
+      <p>pentagonal greenhouse pdf</p>
+      <h4>Excreta</h4>
+      <h5>Numoon Sensa from Hydrogen City (5/8/3112)</h5>
+      <p>
+        The rubber bricks are proving to be very suitable for the underground
+        structural requirements. Regarding the underground structures, I think
+        the earth conduits will produce enough electrical current to run most of
+        the planned systems. Everyone is very happy that the excreta recycling
+        mech is now underground as the smell of the methane was undesirable. It
+        was profound how the 'green above, silver below' paradigm motivated
+        everyone as the build-out of the underground had to be done with much
+        care and planning.
+      </p>
+      <p>rubber brick pdf</p>
+      <p>underground conduit pdf</p>
+      <p>underground recycling space pdf</p>
+      <h5>Davey Rockfella from Hydrogen City (6/12/3113)</h5>
+      <p>
+        We moved the excreta recycling system to the new underground spaces. The
+        air circulation system still needs work, and Numoon is still testing
+        some ideas.
+      </p>
+      <p>underground excreta recycling pdf</p>
+      <h5>Trappen Paradise from Hydrogen City (9/9/3113)</h5>
+      <p>
+        I have to say we are pleased to announce that the waterfall pool is
+        finished. Star's idea for making the pump self-cleaning was brilliant.
+        We will still have to watch the algae and ph levels, as the mineral and
+        metal ionization process has some side-effects and still needs work.
+      </p>
+      <p>waterfall pool pdf</p>
     </body>
   </html>
 </html>
