--- a/website/technology/tech.html
+++ b/website/technology/tech.html
@@ -44,7 +44,14 @@
         supports made the structure flexible and strong. We are hoping that the
         dug-out and drains will protect the structure from the wind and rain.
       </p>
-      <p>pentagonal greenhouse pdf</p>
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/pentagon.png"
+          alt="Pentagon Greenhouse"
+        />
+        Pentagonal Greenhouse pdf
+      </div>
       <h4>Excreta</h4>
       <h5>Numoon Sensa from Hydrogen City (5/8/3112)</h5>
       <p>
@@ -57,24 +64,65 @@
         everyone as the build-out of the underground had to be done with much
         care and planning.
       </p>
-      <p>rubber brick pdf</p>
-      <p>underground conduit pdf</p>
-      <p>underground recycling space pdf</p>
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/brick.png"
+          alt="Rubber Brick"
+        />
+        Rubber Brick pdf
+      </div>
+
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/circuit.png"
+          alt="Underground Power"
+        />
+        Underground Conduit pdf
+      </div>
+
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/underground.png"
+          alt="Underground Plan"
+        />
+        Underground Recycling Space pdf
+      </div>
+
       <h5>Davey Rockfella from Hydrogen City (6/12/3113)</h5>
       <p>
         We moved the excreta recycling system to the new underground spaces. The
         air circulation system still needs work, and Numoon is still testing
         some ideas.
       </p>
-      <p>underground excreta recycling pdf</p>
+
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/mecha.png"
+          alt="Excreta Recycling"
+        />
+        Underground Excreta Recycling pdf
+      </div>
+
       <h5>Trappen Paradise from Hydrogen City (9/9/3113)</h5>
       <p>
         I have to say we are pleased to announce that the waterfall pool is
         finished. Star's idea for making the pump self-cleaning was brilliant.
         We will still have to watch the algae and ph levels, as the mineral and
-        metal ionization process has some side-effects and still needs work.
+        metal ionization processes have some side-effects and still needs work.
       </p>
-      <p>waterfall pool pdf</p>
+
+      <div>
+        <img
+          style="float: center; margin: 20px;"
+          src="./img/waterfall.png"
+          alt="Waterfall Pool"
+        />
+        Waterfall Pool pdf
+      </div>
     </body>
   </html>
 </html>
